--- a/style.css
+++ b/style.css
@@ -1,72 +1,99 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .accordion__container {
-    width: 1170px;
-    height: 600px;
+  width: 100%;
+  height: 600px;
+  margin: 0 auto;
+}
+@media screen and (min-width: 1170px) {
+  .accordion__container {
+    width: 1070px;
     margin: 0 auto;
+  }
 }
-
-.accordion__list {
-    display: flex;
-
-}
-
-.acordion__item:first-of-type {
-    background-color: darkblue;
+.accordion__container .accordion__list {
+  display: flex;
 }
 
 .acordion__item {
-    /* border: 1px solid green; */
-    height: 600px;
-    width: 20%;
-    list-style-type: none;
-    transition: all 1000ms ease;
-    position: relative;
+  /* border: 1px solid green; */
+  height: 600px;
+  width: 20%;
+  list-style-type: none;
+  transition: all 1000ms ease;
+  position: relative;
+  -webkit-filter: grayscale(1);
+  filter: grayscale(1);
+  color: white;
 }
 
 .acordion__item__hover {
-    width: 50%;
+  width: 70%;
+  -webkit-filter: grayscale(0);
+  filter: grayscale(0);
+  color: #141f3c;
+}
+
+.acordion__item:first-of-type:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("image/image1.jpg");
+  filter: grayscale(0);
 }
 
 .acordion__item:nth-of-type(2) {
-    background-color: darkred;
+  background: url("image/image2.jpg");
 }
 
 .acordion__item:nth-of-type(3) {
-    background-color: darkgreen;
+  background: url("image/image3.jpg");
 }
 
 .acordion__item:nth-of-type(4) {
-    background-color: darkorange;
+  background: url("image/image4.jpg");
 }
 
 .acordion__item:nth-of-type(5) {
-    background-color: darkviolet;
+  background: url("image/image5.jpg");
 }
 
 .accordion__text {
-    position: relative;
-    height: 600px;
-    /* background-color: yellow; */
+  position: relative;
+  height: 600px;
+  /* background-color: yellow; */
 }
 
 .accordion__text p {
-    position: absolute;
-    transform: rotate(-90deg);
-    transform-origin: 70px 70px;
-    bottom: 0;
-    left: 0;
-    width: 600px;
-    height: 23.5%;
-    margin: 0;
+  position: absolute;
+  transform: rotate(-90deg);
+  transform-origin: 70px 70px;
+  bottom: 0;
+  left: 0;
+  width: 600px;
+  height: 23.5%;
+  margin: 0;
+  font-family: Calibri;
+  font-size: 30px;
+  z-index: 3000;
 }
 
 .yellowBack {
-    background-color: yellow;
-    width: 100px;
-    transition: all 1000ms ease;
+  background-color: #efb016;
+  width: 100px;
+  transition: all 1000ms ease;
 }
 
 .yellowBack {
-    /* background-color: yellow; */
-    /* width: 15%; */
-    /* height: 20vw; */
+  /* background-color: yellow; */
+  /* width: 15%; */
+  /* height: 20vw; */
 }
+
+/*# sourceMappingURL=style.css.map */
